// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageWrapper /> should render and match the snapshot 1`] = `
.c0 {
  height: 10px;
  width: 100px;
  border-radius: 0.5rem;
}

.c0 > img {
  border-radius: 0.5rem;
}

<div
  className="c0"
/>
`;

exports[`<ImageWrapper /> should render and match the snapshot without any props 1`] = `
.c0 {
  height: auto;
  width: 100%;
  border-radius: 0.5rem;
}

.c0 > img {
  border-radius: 0.5rem;
}

<div
  className="c0"
/>
`;
